fixed ajaxFrame z-index

--- a/web/css/screen.css
+++ b/web/css/screen.css
@@ -175,7 +175,7 @@ html, body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 10;
 }
 
 /* line 43, ../sass/_structure_main.scss */
@@ -184,7 +184,6 @@ html, body {
   display: table-cell;
   text-align: center;
   vertical-align: middle;
-  z-index: 10;
 }
 
 /* line 51, ../sass/_structure_main.scss */
@@ -193,7 +192,6 @@ html, body {
   margin: auto;
   display: block;
   width: 100%;
-  z-index: 10;
 }
 
 /* -- MIN WIDTH 1000px ------------------------ */
