--- a/web/sass/_structure_main.scss
+++ b/web/sass/_structure_main.scss
@@ -37,7 +37,7 @@ $panelWidth : 0;
     left :            0;
     width :        100%;
     height :       100%;
-    z-index :         2;
+    z-index :        10;
 }
 
 #ajaxContainer {
@@ -45,7 +45,7 @@ $panelWidth : 0;
     display :    table-cell;
     text-align :     center;
     vertical-align : middle;
-    z-index :            10;
+    // z-index :            10;
 }
 
 #ajaxContent {
@@ -53,7 +53,7 @@ $panelWidth : 0;
     margin :   auto;
     display : block;
     width :    100%;
-    z-index :    10;
+    // z-index :    10;
 }
 
 
